--- a/app/composer.json
+++ b/app/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ahrocha\\PpsApp\\": "src/"
+            "App\\": "src/"
         }
     }
 }
