--- a/app/composer.json
+++ b/app/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "guzzlehttp/guzzle": "^7.9",
         "bramus/router": "^1.6",
-        "monolog/monolog": "^3.9"
+        "monolog/monolog": "^3.9",
+        "php-amqplib/php-amqplib": "^3.7"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12",
