--- a/app/composer.json
+++ b/app/composer.json
@@ -5,7 +5,8 @@
         "guzzlehttp/guzzle": "^7.9",
         "bramus/router": "^1.6",
         "monolog/monolog": "^3.9",
-        "php-amqplib/php-amqplib": "^3.7"
+        "php-amqplib/php-amqplib": "^3.7",
+        "firebase/php-jwt": "^6.11"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12",
